# AIxStock

./: .env  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
backend/: app.py  logging_config.py  main.py
backend/routers/: agent.py  performance.py  stock.py
backend/services/data_source/: akshare_data_source.py
backend/services/data_source/tests/: test_akshare_input.py
backend/services/datas/: akshare_input.py
backend/services/datas/tests/: test_akshare_input.py
backend/services/store/tests/: test_single_stock_store.py
frontend/aix-stock-fe/: README.md  index.html  package.json  pnpm-lock.yaml
local_storage/: README.md
strategies/: strategy_demo.py
