[project]
name = "aixstock"
version = "0.1.0"
description = "aixstock is dedicated for predicting the stock trend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.62",
    "pandas>=3.0.3",
]

[tool.pytest.ini_options]
testpaths = ["backend"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
]
