[project]
name = "aixstock"
version = "0.1.0"
description = "aixstock is dedicated for predicting the stock trend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.62",
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
testpaths = ["backend"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
]
